--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "homepage": "https://github.com/Samsung/Wits/issues",
     "dependencies": {
+        "@tizentv/webide-common-tizentv": "0.0.1",
         "archiver": "^1.3.0",
         "chrome-launcher": "^0.13.2",
         "commander": "^4.1.1",
