--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "homepage": "https://github.com/Samsung/Wits/issues",
     "dependencies": {
-        "@tizentv/webide-common-tizentv": "file:../srcn/webIDE-common-tizentv",
+        "@tizentv/webide-common-tizentv": "latest",
         "archiver": "^1.3.0",
         "chrome-launcher": "^0.13.2",
         "commander": "^4.1.1",
